vlib/v/checker/tests/assign_enum_at_comptime.out
vlib/v/checker/tests/assign_generic_fn_err.vv:13:21: error: enums can only be assigned `int` values `t.$field.name`: expected `TestStruct`, not `string`
   11 | 
   12 |     $for field in TestStruct.fields {
   13 |         t.$(field.name) = '1'
      |                           ~~~
   14 |     }
   15 | }